Fri Apr 27 16:47:18 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix problem with RPC returning result

Fri Apr 27 13:16:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: fix for HP/UX 11 getpwuid_r detect
	* src/tds/convert.c: portability and a comment

Fri Apr 25 20:49:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: remove a TODO
	
Fri Apr 25 20:33:21 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- fix wrong version reading using mssql with tds 4.2
	- remove memory leak if text is too large

Fri Apr 25 19:04:52 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
	* src/odbc/prepare_query.c:
	- applied patch #727555 for binary data

Fri Apr 25 14:12:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/t0003.c:
	- fix test (broken...)

Fri Apr 25 13:52:51 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- make tds_(alloc|free)_env static
	- implement tds_realloc_socket and use it
	* src/odbc/native.c: include ctype.h avoiding warning

Wed Apr 23 13:18:08 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/odbc/odbc.c attempt to fix SQLGetInfo for SQL_DBMS_VER

Tue Apr 23 17:08:36 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/unittests/funccall.c:
	- handle spaces in ODBC escape syntax

Tue Apr 22 20:47:23 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- improve GetInfo to make StarOffice more happy (I hope..)

Tue Apr 22 11:02:42 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsstring.h:
	- fix compile error if not --enable-extra-checks

Mon Apr 21 21:32:27 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/dataread.c:
	- work even with mssql

Mon Apr 21 18:05:21 CET 2003  Frediano Ziglio <freddy77@angelfire.com>